--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.27"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-redux": "^7.1.28"
   }
 }
